--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -45,7 +45,7 @@
               rows="4"
               cols="50"
               placeholder="Write your comment here..."
-              class="mt-2 p-2 border rounded-md w-full max-w-xs focus:outline-none focus:ring-2 focus:ring-blue-500"
+              class="mt-2 p-2 border rounded-md w-full max-w-xs focus:outline-none focus:ring-2 focus:ring-blue-500" required
             ></textarea
             ><br /><br />
             <input
@@ -67,12 +67,12 @@
               type="file"
               name="image"
               accept="image/*"
-              class="mt-2 p-2 border rounded-md w-full max-w-xs text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500"
+              class="mt-2 p-2 border rounded-md w-full max-w-xs text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500" required
             /><br /><br />
             <input
               type="submit"
               value="Upload Image"
-              class="mt-2 px-4 py-2 bg-green-500 text-white font-semibold rounded-md hover:bg-green-600 focus:outline-none"
+              class="mt-2 px-4 py-2 bg-green-500 text-white font-semibold rounded-md hover:bg-green-600 focus:outline-none" 
             />
           </form>
         </div>
